--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -13569,9 +13569,9 @@
         "Description\n",
         "\n",
         "---\n",
-        "A Syntax Error in Python occurs when the code does not follow the proper structure or grammar rules of the Python programming language. It typically arises when there is a mistake in the code's formatting, such as missing punctuation (e.g., parentheses, colons), misspelled keywords, incorrect indentation, or improper use of operators. Syntax Errors are detected by the Python interpreter when the program is compiled, and the interpreter will stop execution, pointing out the location where the error occurred. For example, omitting a colon at the end of an if statement or failing to close a parenthesis will trigger a Syntax Error.\n",
+        "A SyntaxError in Python occurs when the code does not follow the proper structure or grammar rules of the Python programming language. It typically arises when there is a mistake in the code's formatting, such as missing punctuation (e.g., parentheses, colons), misspelled keywords, incorrect indentation, or improper use of operators. SyntaxErrors are detected by the Python interpreter when the program is compiled, and the interpreter will stop execution, pointing out the location where the error occurred. For example, omitting a colon at the end of an if statement or failing to close a parenthesis will trigger a SyntaxError.\n",
         "\n",
-        "The Syntax Errors are the most common errors in programming!"
+        "The SyntaxErrors are the most common errors in programming!"
       ],
       "metadata": {
         "id": "u4cj2YfNVBBf"
@@ -13629,7 +13629,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "A Value Error occurs when a function receives an argument of the correct type but an inappropriate value that cannot be processed. This error typically arises when an operation or function call receives an argument that is valid in terms of its data type but not valid for the intended operation. For example, trying to convert a string that does not represent a number into an integer using int() will raise a Value Error. An example would be int(\"abc\"), which will fail because the string \"abc\" cannot be interpreted as an integer. This type of error highlights a mismatch between the value provided and the expected value for a particular operation."
+        "A ValueError occurs when a function receives an argument of the correct type but an inappropriate value that cannot be processed. This Error typically arises when an operation or function call receives an argument that is valid in terms of its data type but not valid for the intended operation. For example, trying to convert a string that does not represent a number into an integer using *int()* will raise a ValueError. An example would be int(\"abc\"), which will fail because the string \"abc\" cannot be interpreted as an integer. This type of error highlights a mismatch between the value provided and the expected value for a particular operation."
       ],
       "metadata": {
         "id": "dG-9_svYVlaG"
@@ -13717,13 +13717,25 @@
         "---\n",
         "          try:\n",
         "              # Code that might raise a ZeroDivisionError\n",
-        "              check_expression()\n",
+        "              result = numerator / denominator\n",
+        "              \n",
         "          except ZeroDivisionError:\n",
         "              # Code to handle the ZeroDivisionError\n",
         "              print(\"Error: Cannot divide by zero.\")"
       ],
       "metadata": {
         "id": "IjqD-kdYN_kG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "YabplG1vPnJV"
       }
     },
     {
@@ -15212,6 +15224,464 @@
       ],
       "metadata": {
         "id": "XB9582OjVOqt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10 Miscellaneous\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "H_W8OXTSQV1S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10.1 Closure function\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "u4b7jlHeRrGN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "A closure function in Python refers to a function that retains access to variables from its enclosing scope, even after that scope has finished execution. This concept is particularly useful when you need to remember the state across multiple calls to a function. In a closure, the inner function has access to the variables of the outer function, allowing it to retain and modify the state as needed. This ability to \"remember\" the outer variables is what makes closures powerful. Closures are often used for tasks like data encapsulation, maintaining a running total or counter, and implementing decorators. They provide a way to keep track of data in a compact, efficient manner without needing to use global variables or objects."
+      ],
+      "metadata": {
+        "id": "T3UBr6EZRmTm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          def outer_function(outer_variable):\n",
+        "              def inner_function(inner_variable):\n",
+        "                  # The inner function can access the outer variable\n",
+        "                  return outer_variable + inner_variable\n",
+        "              return inner_function\n"
+      ],
+      "metadata": {
+        "id": "WkRrBFYoR15B"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "mDlYNCUSSLFh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def adder(base_value):\n",
+        "    def add(new_value):\n",
+        "        return base_value + new_value\n",
+        "    return add\n",
+        "\n",
+        "# Create a closure that adds 10 to any number\n",
+        "add_10 = adder(10)\n",
+        "\n",
+        "print(add_10(5))   # Output: 15\n",
+        "print(add_10(20))  # Output: 30\n",
+        "\n",
+        "# Create another closure that adds 100\n",
+        "add_100 = adder(100)\n",
+        "\n",
+        "print(add_100(50))  # Output: 150"
+      ],
+      "metadata": {
+        "id": "v9kx8I-FSkFA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def multiplier(factor):\n",
+        "    def multiply(value):\n",
+        "        return factor * value\n",
+        "    return multiply\n",
+        "\n",
+        "# Creating a closure with a factor of 3\n",
+        "multiply_by_3 = multiplier(3)\n",
+        "\n",
+        "# Now using the closure to multiply different values\n",
+        "print(multiply_by_3(10))  # Output: 30\n",
+        "print(multiply_by_3(5))   # Output: 15"
+      ],
+      "metadata": {
+        "id": "ekp8ZdrZSbMH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10.2 Map function\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "7tk8v8iKTGlq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *map()* function in Python is a built-in functional programming tool used to apply a given function to every item in an iterable (like a list, tuple, or set) without writing an explicit loop. It's especially useful for transforming large datasets efficiently and in a clean, readable way."
+      ],
+      "metadata": {
+        "id": "6gjcYX99TRfs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          map(function, iterable)"
+      ],
+      "metadata": {
+        "id": "1ZaO9fOxTlut"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "vTTl-6m_TrAD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example with regular function\n",
+        "\n",
+        "def square(x):\n",
+        "    return x * x\n",
+        "\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "squared_numbers = list(map(square, numbers))\n",
+        "\n",
+        "print(squared_numbers)  # Output: [1, 4, 9, 16, 25]"
+      ],
+      "metadata": {
+        "id": "CiRGqwFhT0tv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example with lambda function\n",
+        "\n",
+        "numbers = [10, 20, 30]\n",
+        "doubled = list(map(lambda x: x * 2, numbers))\n",
+        "\n",
+        "print(doubled)  # Output: [20, 40, 60]\n"
+      ],
+      "metadata": {
+        "id": "NdDRFRwvT-Qj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "If working with very large files or datasets, consider combining *map()* with *iter()* on file objects, or use it with *multiprocessing.Pool.map()* to parallelize the transformation across multiple CPU cores for performance boosts."
+      ],
+      "metadata": {
+        "id": "YA9gNjZ8UZo6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10.3 Filter function\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "-npI4giuU0dv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *filter()* function is a built-in Python tool used to filter elements from an iterable based on a condition defined in a function. It returns only the items that make the function evaluate to True. It's commonly used when working with large datasets to selectively keep elements without writing verbose loops."
+      ],
+      "metadata": {
+        "id": "5hyuUKp5U4Kn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          filter(function, iterable)"
+      ],
+      "metadata": {
+        "id": "hG3e_c5zVJew"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "8lvKSTWxVNhK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example using modulus operator %\n",
+        "\n",
+        "def is_even(n):\n",
+        "    return n % 2 == 0\n",
+        "\n",
+        "numbers = [1, 2, 3, 4, 5, 6]\n",
+        "even_numbers = list(filter(is_even, numbers))\n",
+        "\n",
+        "print(even_numbers)  # Output: [2, 4, 6]\n"
+      ],
+      "metadata": {
+        "id": "hFXooJpyVd68"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example using lambda function\n",
+        "\n",
+        "numbers = [10, 15, 20, 25, 30]\n",
+        "filtered = list(filter(lambda x: x > 20, numbers))\n",
+        "\n",
+        "print(filtered)  # Output: [25, 30]\n"
+      ],
+      "metadata": {
+        "id": "Ie00fKp6Vr5N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10.4 Reduce function\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "A3USJxnvV2h_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *reduce()* function is part of the functools module and is used to apply a function cumulatively to the items of an iterable, reducing it to a single value. It’s commonly used for operations like summing, multiplying, or combining elements in a sequence. This function is ideal for processing large datasets where you need a final aggregated result, such as total, max, min, or a single combined string."
+      ],
+      "metadata": {
+        "id": "yC-MGm_yV66C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          from functools import reduce\n",
+        "\n",
+        "          reduce(function, iterable[, initializer])"
+      ],
+      "metadata": {
+        "id": "zC-k7bDmWIY5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "yid6kJy3WSpp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example using regular function\n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "def multiply(x, y):\n",
+        "    return x * y\n",
+        "\n",
+        "numbers = [1, 2, 3, 4]\n",
+        "product = reduce(multiply, numbers)\n",
+        "\n",
+        "print(product)  # Output: 24"
+      ],
+      "metadata": {
+        "id": "GwugFyUKWZ1Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example using lambda function\n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "numbers = [10, 20, 30, 40]\n",
+        "total = reduce(lambda x, y: x + y, numbers)\n",
+        "\n",
+        "print(total)  # Output: 100\n"
+      ],
+      "metadata": {
+        "id": "hqEzUiCaWlYy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10.5 Multiprocessing\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "PBlhGCmmXPTQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Multiprocessing in Python allows you to run multiple processes simultaneously, leveraging multiple CPU cores to handle tasks in parallel. This is especially useful for CPU-bound operations such as heavy calculations, data transformations, or simulations on large datasets. The multiprocessing module is a built-in solution for parallel execution, and it avoids the Global Interpreter Lock (GIL), making it ideal for high-performance computing tasks."
+      ],
+      "metadata": {
+        "id": "ApvHqEcwXTKO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          from multiprocessing import Pool\n",
+        "\n",
+        "          def function_to_run(arg):\n",
+        "              # perform some computation\n",
+        "              return result\n",
+        "\n",
+        "          with Pool(processes=number_of_cores) as pool:\n",
+        "          results = pool.map(function_to_run, data_iterable)"
+      ],
+      "metadata": {
+        "id": "suPbvR4FXfFX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example where sqareing big numbers in parallel\n",
+        "\n",
+        "from multiprocessing import Pool\n",
+        "\n",
+        "def square(x):\n",
+        "    return x * x\n",
+        "\n",
+        "big_data = range(1_000_000)\n",
+        "\n",
+        "with Pool(4) as pool:\n",
+        "    results = pool.map(square, big_data)\n",
+        "\n",
+        "print(results[:100])  # Shows first 100 results\n"
+      ],
+      "metadata": {
+        "id": "efKwxpWxXw1H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example where filtering prime number in large dataset\n",
+        "\n",
+        "from multiprocessing import Pool\n",
+        "import math\n",
+        "\n",
+        "def is_prime(n):\n",
+        "    if n < 2:\n",
+        "        return False\n",
+        "    for i in range(2, int(math.sqrt(n)) + 1):\n",
+        "        if n % i == 0:\n",
+        "            return False\n",
+        "    return True\n",
+        "\n",
+        "numbers = range(10_000)\n",
+        "\n",
+        "with Pool() as pool:\n",
+        "    primes = pool.map(is_prime, numbers)\n",
+        "\n",
+        "# Extract only prime numbers\n",
+        "prime_numbers = [num for num, is_p in zip(numbers, primes) if is_p]\n",
+        "print(prime_numbers[:100])  # Outputs first 100 primes\n"
+      ],
+      "metadata": {
+        "id": "4Chs1lk8YF1_"
       },
       "execution_count": null,
       "outputs": []
