--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -9820,7 +9820,7 @@
       "cell_type": "markdown",
       "source": [
         "Function with the return statement\n",
-        "---"
+        "---\n"
       ],
       "metadata": {
         "id": "KUH1VtuG01Au"
@@ -9830,6 +9830,7 @@
       "cell_type": "markdown",
       "source": [
         "Description\n",
+        "\n",
         "---\n",
         "A function with a *return* statement sends a value back to the part of the program where the function was called. The return statement inside of a function will terminate the function execution and return to the calling position with some return value. The return value can be any data type including int, float, complex data, data sequencies,and user-defined objects like classes and functions. The return value can be omited or you can have a single return statement. A function can have multiple *return* statements often within conditional blocks, but only one will be executed and function will exit. If no *return* statement is given, the function returns None by default. Using *return* allows the functions to produce outputs that can be reused elsewhere in a program, making them more versatile and powerful."
       ],
@@ -10643,7 +10644,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Functions with default parameters\n",
+        "5.3 Functions with default parameters\n",
         "---"
       ],
       "metadata": {
@@ -10789,7 +10790,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Functions with data sequences passed as arguments\n",
+        "5.5 Functions with data sequences passed as arguments\n",
         "---"
       ],
       "metadata": {
@@ -10912,7 +10913,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Modyfing a list inside of the function\n",
+        "5.6 Modyfing a list inside of the function\n",
         "---"
       ],
       "metadata": {
@@ -10975,15 +10976,29 @@
         "print( \"My list after the deletion\",  lst )\n"
       ],
       "metadata": {
-        "id": "OAXxUwTZnbF9"
+        "id": "OAXxUwTZnbF9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bcaae2e1-3670-44ee-d23f-f57a85869e31"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My list before the deletion [1, 2, 3, 4, 5]\n",
+            "List after deleting the second index [1, 2, 4, 5]\n",
+            "My list after the deletion [1, 2, 4, 5]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "5.5 Lambda function\n",
+        "5.7 Lambda function\n",
         "---"
       ],
       "metadata": {
@@ -11074,7 +11089,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5.6 Function annotations\n",
+        "5.8 Function annotations\n",
         "---"
       ],
       "metadata": {
@@ -11110,7 +11125,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Return value annotation\n",
+        "5.9 Return value annotation\n",
         "---"
       ],
       "metadata": {
@@ -15231,8 +15246,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "10 Miscellaneous\n",
-        "---"
+        "# Section 10: Miscellaneous\n",
+        "\n",
+        "10.1 Closure function\n",
+        "\n",
+        "10.2 Map function\n",
+        "\n",
+        "10.3 Filter function\n",
+        "\n",
+        "10.4 Reduce function\n",
+        "\n",
+        "10.5 Multiprocessing"
       ],
       "metadata": {
         "id": "H_W8OXTSQV1S"
@@ -15682,6 +15706,125 @@
       ],
       "metadata": {
         "id": "4Chs1lk8YF1_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "To determine the number of logical and physical CPU cores using Python, you can use the os, multiprocessing, and psutil modules. Both *os.cpu_count()* and *multiprocessing.cpu_count()* return the number of logical cores, which include all virtual threads created by technologies like hyper-threading. For a more detailed view, the *psutil* module provides both: *psutil.cpu_count(logical=True)* returns logical cores, while *psutil.cpu_count(logical=False)* returns the number of physical cores (actual hardware processors). This is especially helpful when you want to optimize multiprocessing tasks based on actual hardware limits. Note that psutil needs to be installed separately via pip install psutil."
+      ],
+      "metadata": {
+        "id": "BBp7PytJZaeE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          # Using os\n",
+        "          import os\n",
+        "          logical_cores_os = os.cpu_count()\n",
+        "\n",
+        "          # Using multiprocessing\n",
+        "          import multiprocessing\n",
+        "          logical_cores = multiprocessing.cpu_count()\n",
+        "\n",
+        "          # Using psutil (requires installation)\n",
+        "          import psutil\n",
+        "          logical_cores_psutil = psutil.cpu_count(logical=True)\n",
+        "          physical_cores = psutil.cpu_count(logical=False)\n"
+      ],
+      "metadata": {
+        "id": "KPo829oHazPb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "MNjTcjX7ZkRa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "print(\"Logical CPUs:\", os.cpu_count())"
+      ],
+      "metadata": {
+        "id": "kGYkpyE8ZnG0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import multiprocessing\n",
+        "\n",
+        "print(\"Logical cores (usable for multiprocessing):\", multiprocessing.cpu_count())"
+      ],
+      "metadata": {
+        "id": "pOR2mMF5Zzej"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import psutil\n",
+        "\n",
+        "print(\"Logical CPUs:\", psutil.cpu_count(logical=True))   # Includes hyper-threaded cores\n",
+        "print(\"Physical cores:\", psutil.cpu_count(logical=False))  # Excludes hyper-threading"
+      ],
+      "metadata": {
+        "id": "AQzOXDm3Z-BF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import multiprocessing\n",
+        "import os\n",
+        "import psutil\n",
+        "import time\n",
+        "\n",
+        "def process_data(data):\n",
+        "    # Get the current process ID (pid) and the core it's running on\n",
+        "    pid = os.getpid()\n",
+        "    core = psutil.Process(pid).cpu_num()  # CPU core number\n",
+        "    print(f\"Process ID {pid} is running on CPU core {core} with data: {data}\")\n",
+        "    time.sleep(1)  # Simulate some processing time\n",
+        "    return data * 2  # Simulate a computation (e.g., doubling the data)\n",
+        "\n",
+        "def main():\n",
+        "    data = [i for i in range(1, 21)]  # Big data example\n",
+        "\n",
+        "    with multiprocessing.Pool(2) as pool:\n",
+        "        results = pool.map(process_data, data)\n",
+        "\n",
+        "    print(\"\\nResults:\", results)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "NoFoTkSpbdcX"
       },
       "execution_count": null,
       "outputs": []
