--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -11418,7 +11418,9 @@
         "\n",
         "6.4 Plotting modules\n",
         "\n",
-        "6.5 Molecular visualization modules\n"
+        "6.5 Molecular visualization modules\n",
+        "\n",
+        "6.6 Location of modules"
       ],
       "metadata": {
         "id": "oK3oYTd9fuxi"
@@ -11481,10 +11483,22 @@
         "print(\"My current working directory: \", cwd)"
       ],
       "metadata": {
-        "id": "ldJduVgxuTUc"
+        "id": "ldJduVgxuTUc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fc93d2e2-c975-4e01-9afe-8c9dda6e81dd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My current working directory:  /content\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11500,10 +11514,22 @@
         "print(\"Content of my directory: \", dir_content)"
       ],
       "metadata": {
-        "id": "YYDu5IL9u6oi"
+        "id": "YYDu5IL9u6oi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82c42aaf-0702-45f1-e95e-3c545da5b322"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Content of my directory:  ['.config', 'sample_data']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11514,10 +11540,22 @@
         "print(sys.version)"
       ],
       "metadata": {
-        "id": "UOIGTJNDp8Og"
+        "id": "UOIGTJNDp8Og",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f439919-8821-41d8-fc0a-c36ed61a10bc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.11.12 (main, Apr  9 2025, 08:55:54) [GCC 11.4.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11529,10 +11567,22 @@
         "print(sys.path)"
       ],
       "metadata": {
-        "id": "qMZ_QbSSsVyv"
+        "id": "qMZ_QbSSsVyv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a5c3a755-e809-4657-c100-cb922703068d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['/content', '/env/python', '/usr/lib/python311.zip', '/usr/lib/python3.11', '/usr/lib/python3.11/lib-dynload', '', '/usr/local/lib/python3.11/dist-packages', '/usr/lib/python3/dist-packages', '/usr/local/lib/python3.11/dist-packages/IPython/extensions', '/usr/local/lib/python3.11/dist-packages/setuptools/_vendor', '/root/.ipython']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11543,10 +11593,22 @@
         "print(time.strftime(\"%H:%M:%S\"))\n"
       ],
       "metadata": {
-        "id": "IQAmTZrWlJGL"
+        "id": "IQAmTZrWlJGL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba0b7bac-abfc-485d-dced-4fe175e37704"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "04:11:48\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11557,10 +11619,22 @@
         "print(datetime.datetime.now())"
       ],
       "metadata": {
-        "id": "TGU64hC9mGBT"
+        "id": "TGU64hC9mGBT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a6754b9-a627-4e1f-9018-ea38658428d9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-06-01 04:11:48.662386\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11571,10 +11645,22 @@
         "print(math.pi)"
       ],
       "metadata": {
-        "id": "_J3FKW-GwZ1F"
+        "id": "_J3FKW-GwZ1F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cfac1068-2027-4d34-aecb-56b4d67dbc12"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.141592653589793\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -11587,10 +11673,22 @@
         "print(myFirstList)"
       ],
       "metadata": {
-        "id": "uPkzXV5soOd4"
+        "id": "uPkzXV5soOd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1bbe89fa-7c38-43e0-d2ef-5ed966e81ff2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['__doc__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'cbrt', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'e', 'erf', 'erfc', 'exp', 'exp2', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'lcm', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'nextafter', 'perm', 'pi', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc', 'ulp']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -12247,6 +12345,84 @@
       ],
       "metadata": {
         "id": "o-iQw9AGCldg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6.6 Location of modules\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "kKYDLvxqtBFu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "\n",
+        "---\n",
+        "A standard module in Python is a built-in module that comes pre-installed with the Python Standard Library, providing essential functionality like math operations (math), file handling (os), and system interaction (sys). When you import a standard module using the import statement, Python searches for the module following a defined order using the sys.path list. This list includes paths to the current directory, standard library directories, and any additional directories defined by environment variables like PYTHONPATH. Python locates standard modules by scanning these directories for a matching .py, .pyc, or compiled extension file. Because standard modules are bundled with Python, they are prioritized and typically found quickly without needing any manual installation."
+      ],
+      "metadata": {
+        "id": "W_yv9OYetXiU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          import sys\n",
+        "\n",
+        "          print(sys.path)"
+      ],
+      "metadata": {
+        "id": "YJpxZTrEtc7U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "CfnRl9gzt2QG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This prints the list of directories Python searches in order when you use import some_module.\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "print(sys.path)"
+      ],
+      "metadata": {
+        "id": "lch3nEjEt874"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find a location of an imported module\n",
+        "\n",
+        "import os\n",
+        "\n",
+        "print(os.__file__)"
+      ],
+      "metadata": {
+        "id": "zH5uzlgjuS4D"
       },
       "execution_count": null,
       "outputs": []
