--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -11787,6 +11787,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "When a module is imported in Python, its code is read and executed. All modules contain definitions for functions, classes, and variables. When you import a module, Python runs through the entire module, making its contents available to the importing file. Python also keeps track of all loaded modules and ensures that each module is initialized only once. You can have a module imported many times by other modules but it will be initialized only once.\n",
+        "\n",
+        "Example:\n",
+        "If you have myModule1.py is imported to myModule2.py, and then both are imported to main.py then myModule1.py will be initialized only once. Even though myModule1.py appears to be imported twice.\n",
+        "\n",
+        "Python also assigns a special built-in variable, \"_ _ _name_ _ \\_\", to every module. If the file is run directly (e.g., python myModule1.py), the \"_ _ _name_ _ \\_\" is set to '_ _ _main_ _ \\_'. If the file is imported as a module, \"_ _ _name_ _ \\_\" is set to the module's name (usually the filename without the .py extension).\n",
+        "\n",
+        "A module is initialized only once!"
+      ],
+      "metadata": {
+        "id": "dRCn8K6lDXMJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Examples\n",
         "\n",
         "---"
@@ -11880,6 +11899,7 @@
         "from numpy.random import seed\n",
         "from numpy.random import randint\n",
         "\n",
+        "#Every time you run the code, the same \"random\" numbers are generated.\n",
         "seed(1)\n",
         "\n",
         "randomValues = randint(0,10,20)\n",
@@ -11887,6 +11907,56 @@
       ],
       "metadata": {
         "id": "XHdJnkxYp8Ux"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "\n",
+        "def exit():\n",
+        "  print('My own exit function!')\n",
+        "\n",
+        "exit()\n",
+        "\n",
+        "sys.exit()\n"
+      ],
+      "metadata": {
+        "id": "KPFJAQ-pkmZ8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sys import exit\n",
+        "\n",
+        "def exit():\n",
+        "  print('My own exit function!')\n",
+        "\n",
+        "exit()"
+      ],
+      "metadata": {
+        "id": "fmf2zLbmlDG9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sys import *\n",
+        "\n",
+        "def exit():\n",
+        "  print('My own exit function!')\n",
+        "\n",
+        "exit()"
+      ],
+      "metadata": {
+        "id": "1P-I1-J9lV0M"
       },
       "execution_count": null,
       "outputs": []
