--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -12345,6 +12345,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "fj21q7Q3NKDa"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "6.6 Molecular visualization modules\n",
