--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -12348,8 +12348,13 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
-        "import matplotlib.pyplot as plt"
+        "x, y, scatter = np.random.randint(100)\n",
+        "\n",
+        "plt.scatter(x=x, y=y, color=scatter, sizes=scatter, cmap='virdis', alpha=0.5)\n",
+        "\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "fj21q7Q3NKDa"
